--- a/css/App.css
+++ b/css/App.css
@@ -313,8 +313,10 @@ a {
   position: absolute;
   width: 120px;
   height: 120px;
-  top: 70px;
+  top: 50%;
   left: -65px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
