--- a/src/App.scss
+++ b/src/App.scss
@@ -335,8 +335,9 @@ a {
           position: absolute;
           width: 120px;
           height: 120px;
-          top: 70px;
+          top: 50%;
           left: -65px;
+          transform: translateY(-50%);
           display: flex;
           justify-content: center;
           align-items: center;
